--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ code<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
                   2014-2016
                   </p>
                   <p>
-                    I was a member of the scout team of my undergraduate university where we organized weekend camps and took
+                    I was a member of the <a href="http://izci.metu.edu.tr/">scout team</a> of my undergraduate university where we organized weekend camps and took
                     the full responsibility of the participants.
                   </p>
                 </td>
