--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
               </p>
               <p>Hi! I am a second year Software Eng. MASc candidate at <a href="https://uwaterloo.ca/">University of Waterloo</a> where I am advised
                 by <a href="https://ece.uwaterloo.ca/~tripunit/">Prof. Mahesh Tripunitara</a> and <a href="https://uwaterloo.ca/scholar/cath">Prof. Catherine Rosenberg.</a>
-              My research focuses on SLA enforcement in software defined RAN settings.
+              My research focuses on Service Level Agreement (SLA) enforcement in software defined Radio Access Network (RAN) settings.
               </p>
               <p>
                  Before starting to the graduate school, I completed my undergraduate studies in <a href="https://eee.metu.edu.tr/">Electrical and Electronics Engineering</a> at <a href="http://www.metu.edu.tr/">Middle East Technical University</a> where I
-                 specialized on telecommunication option in my final year and took extra curriculum classes from the <a href="https://ceng.metu.edu.tr/">Computer Engineering</a>.
+                 specialized on telecommunication option in my final year and took extra classes from the <a href="https://ceng.metu.edu.tr/">Computer Engineering</a>.
               </p>
               <p>
-                During my undergradaute, I had exchange programs at <a href="https://www.ntu.edu.sg/">NTU (Singapore)</a> and <a href="https://www.kaist.ac.kr/en/">KAIST (Korea)</a>. Outside of work, I highly enjoy cooking, hiking and camping.
+                During my undergraduate studies, I had exchange programs at <a href="https://www.ntu.edu.sg/">NTU (Singapore)</a> and <a href="https://www.kaist.ac.kr/en/">KAIST (Korea)</a>. Outside of work, I highly enjoy cooking, hiking and camping.
               </p>
               <p align=center>
                 <a href="mailto:yektademirci@hotmail.com">Email</a> &nbsp/&nbsp
@@ -306,7 +306,7 @@
                 <papertitle> NBA Play-off & Regular Season Relation Analysis with PCA & Artificial Neural Nets <i> 1 month-4 people</i></papertitle>
               </p>
               <p>
-              <a href="https://catalog.metu.edu.tr/course.php?prog=571&course_code=5710499">CENG:499 Intoruction to the machine learning</a> was the first course I took from the computer engineering
+              <a href="https://catalog.metu.edu.tr/course.php?prog=571&course_code=5710499">CENG:499 Introduction to the Machine Learning</a> was the first course I took from the computer engineering
               department as extra curriculum. For the final project,
               we extracted publicly available 2016-2017 NBA data using <b>BeautifulSoup</b>, then used <b>PCA</b> for data preprocessing and trained a few <b>ANN</b> models. </br>
               <a href="https://github.com/YektaDemirci/undergrad_assignments/blob/master/Intro2MachineLearning_CENG499/project/report.pdf">Report</a> <span>|</span>
