--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
                 </a>
               </p>
               <p>
-                <a href="https://uwaterloo.ca/graduate-studies-academic-calendar/graduate-course/subject/CS#656">
-                  ECE 656 Computer Networks - Winter 2020
+                <a href="https://uwaterloo.ca/electrical-computer-engineering/current-undergraduate-students/academic-planning-and-support/course-specific-information#300">
+                  ECE 356 Database Systems - Fall 2021
                 </a>
               </p>
             </td>
