--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <td width="25%"><img src="img/masters.png" alt="masters" width="160" height="100"></td>
             <td width="75%" >
               <p>
-                <papertitle>Weighted Round Robin fashioned slice scheduler in OAI and FlexRAN<i>MASc project</i></papertitle>
+                <papertitle>Weighted Round Robin fashioned slice scheduler in OAI and FlexRAN <i>MASc project</i></papertitle>
               </p>
               <p>
                 To be updated...
@@ -518,10 +518,10 @@
           </td>
           <tr>
             <td width="25%"><img src="img/tetris.png" alt="tetris" width="160" height="160"></td>
-            <td width="75%" valign="center">
+            <td width="100%" valign="center">
               <p>
                 <a href="https://www.udemy.com/course/docker-and-kubernetes-the-complete-guide/">
-                  Docker and Kubernetes: The Complete Guide by Stephen G. - Udemy - Winter 2022
+                  Docker and Kubernetes: The Complete Guide by Stephen Grider - Udemy - Winter 2022
                 </a>
               </p>
               <p>
