--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
             <td width="25%"><img src="img/tetris.png" alt="tetris" width="160" height="160"></td>
             <td width="100%" valign="center">
               <p>
-                <a href="https://www.udemy.com/course/docker-and-kubernetes-the-complete-guide/">
-                  Docker and Kubernetes: The Complete Guide by Stephen Grider - Udemy - Winter 2022
+                <a href="https://www.udemy.com/course/beg-modern-cpp/">
+                  Complete Modern C++ (C++11/14/17) - Udemy - Winter 2022
                 </a>
               </p>
               <p>
