--- a/index.html
+++ b/index.html
@@ -104,18 +104,9 @@
                 <name>Yekta Demirci </name>
               </p>
               <p>
-                Hi there! I am a Software Engineer enthusiast who is always passiniate to learn more.
+                Hi there! I am a Software Engineer enthusiast who is always passiniate to learn more. I am currently working as a software engineer at 
+                <a href="https://www.interaptix.com/">Interaptix Augmented Reality.</a>
               </p>
-              <p style="color:red;">
-                <b>Currently, I am looking for a job as a Software Engineer.</b>
-              </p>
-              <p>   
-                I am extremely interested in taking a role in <b style="color:red;">Augmented Reality/Virtual Reality</b> or <b style="color:red;">Computer Vision</b> related projects.
-                I am currently located at Waterloo, Ontario and eligible to move around Canada (Toronto, Montreal or Vancouver).
-                I have <a href="#projects">experience</a> with both hardware and software. If you feel I might be a good
-                match to your team, please do not hesitate to contact me.
-              </p>
-
               <p>
                 I graduated with Master's of Applied Science (MASc) degree from the Electrical and Computer Engineering
                 at <a href="https://uwaterloo.ca/">the University of Waterloo</a> with Software Engineering specialization.
