--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
                 <a href="https://www.interaptix.com/">Interaptix Augmented Reality.</a>
               </p>
               <p>
-                I graduated with Master's of Applied Science (MASc) degree from the Electrical and Computer Engineering
-                at <a href="https://uwaterloo.ca/">the University of Waterloo</a> with Software Engineering specialization.
-                Before starting to the graduate school, I completed my Bachelor of Science (BSc) in the Electrical and Electronics Engineering at
-                <a href="http://www.metu.edu.tr/">Middle East Technical University</a> where I specialized in telecommunication field during my final 
+                I graduated with a Master's of Applied Science (MASc) degree from <a href="https://uwaterloo.ca/">the University of Waterloo</a>, Electrical and Computer Engineering
+                with Software Engineering specialization. Before starting to the graduate school, I completed my Bachelor of Science (BSc) in the Electrical and Electronics Engineering at
+                <a href="http://www.metu.edu.tr/">Middle East Technical University</a> where I specialized in telecommunication and software fields during my final 
                 year and took extra classes from the <a href="https://ceng.metu.edu.tr/">Computer Engineering</a>.
               </p>
               <p>
                 During my undergraduate studies, I had exchange programs at <a href="https://www.ntu.edu.sg/">NTU (Singapore)</a> and
-                 <a href="https://www.kaist.ac.kr/en/">KAIST (Korea)</a>. Outside of work, I highly enjoy cooking, hiking, camping and travelling to new countries & cultures.
+                 <a href="https://www.kaist.ac.kr/en/">KAIST (Korea)</a>. Outside of work, I highly enjoy cooking, hiking, camping, travelling abroad
+                  and experiencing new cultures.
               </p>
               <p align=center>
                 <a href="mailto:yektademirci@hotmail.com">Email</a> &nbsp/&nbsp
@@ -126,7 +126,7 @@
               </p>
             </td>
             <td width="33%">
-              <img class="img-circle" width="120%" src="img/me.jpg">
+              <img class="img-circle" width="120%" src="img/pp.png">
             </td>
           </tr>
         </table>
@@ -138,7 +138,7 @@
                 My MASc research project lied in Software Engineering and Radio Access Networks (RAN). I was supervised by 
                 <a href="https://scholar.google.ca/citations?user=oNvTtTAAAAAJ&hl=en">Prof. Mahesh Tripunitara </a> and 
                 <a href="https://scholar.google.ca/citations?user=DT5WUOsAAAAJ&hl=en">Prof. Catherine Rosenberg </a> where I implemented 
-                a two-level Weighted Round Robin fashioned scheduler for RAN sharing on top of a third-party, open-source project
+                two-level Weighted Round Robin fashioned schedulers for RAN sharing on top of a third-party, open-source project
                 with a large codebase (OpenAirInterface) in C/C++. More information about the project is available <a href="#masters">here</a>.
               </p>
               <p>
@@ -156,6 +156,22 @@
           </tr>
         </table>
         <table>
+
+          <tr id="rover" >
+            <td width="25%"><img src="img/rover.png" alt="masters" width="180" height="140"></td>
+            <td width="75%" >
+              <p>
+                <papertitle> "HoloLens 2 fundamentals: developing mixed reality applications" learning path  <i>A few days- individual </i></papertitle>
+              </p>
+              <p>
+                I completed a Microsoft learning path that covers the fundamentals of mixed reality apps using HoloLens 2. I successfully integrated the scripts,
+                compiled the projects and deployed the executables to the HoloLens 2 device. Through the modules, I learnt the essentials about hand interaction, 
+                object tracking, 3D object interaction, eye-tracking and spatial anchors.</br>
+              <a href="https://github.com/YektaDemirci/HoloLens2-trials">Compiled Code</a>
+              </p>
+
+            </td>
+          </tr>
 
           <tr id="masters" >
             <td width="25%"><img src="img/masters.png" alt="masters" width="180" height="100"></td>
