--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
                 <name>Yekta Demirci </name>
               </p>
               <p>
-                Hi there! I am a Software Engineer enthusiast who is always passiniate to learn more. I am currently working as a software engineer at 
+                Hi there! I am a Software Engineer enthusiast who is always passiniate to learn more. I am currently working as a software engineer at
                 <a href="https://www.interaptix.com/">Interaptix Augmented Reality.</a>
               </p>
               <p>
                 I graduated with a Master's of Applied Science (MASc) degree from <a href="https://uwaterloo.ca/">the University of Waterloo</a>, Electrical and Computer Engineering
                 with Software Engineering specialization. Before starting to the graduate school, I completed my Bachelor of Science (BSc) in the Electrical and Electronics Engineering at
-                <a href="http://www.metu.edu.tr/">Middle East Technical University</a> where I specialized in telecommunication and software fields during my final 
+                <a href="http://www.metu.edu.tr/">Middle East Technical University</a> where I specialized in telecommunication and software fields during my final
                 year and took extra classes from the <a href="https://ceng.metu.edu.tr/">Computer Engineering</a>.
               </p>
               <p>
@@ -120,7 +120,7 @@
               </p>
               <p align=center>
                 <a href="mailto:yektademirci@hotmail.com">Email</a> &nbsp/&nbsp
-                <a href="yektaResume.pdf">Resume</a> &nbsp/&nbsp
+                <!-- <a href="yektaResume.pdf">Resume</a> &nbsp/&nbsp -->
                 <a href="https://www.linkedin.com/in/yektad/">LinkedIn </a> &nbsp/&nbsp
                 <a href="https://github.com/YektaDemirci">Github </a>
               </p>
@@ -135,9 +135,9 @@
             <td width="100%" valign="middle">
               <heading> <b>Research</b> </heading>
               <p>
-                My MASc research project lied in Software Engineering and Radio Access Networks (RAN). I was supervised by 
-                <a href="https://scholar.google.ca/citations?user=oNvTtTAAAAAJ&hl=en">Prof. Mahesh Tripunitara </a> and 
-                <a href="https://scholar.google.ca/citations?user=DT5WUOsAAAAJ&hl=en">Prof. Catherine Rosenberg </a> where I implemented 
+                My MASc research project lied in Software Engineering and Radio Access Networks (RAN). I was supervised by
+                <a href="https://scholar.google.ca/citations?user=oNvTtTAAAAAJ&hl=en">Prof. Mahesh Tripunitara </a> and
+                <a href="https://scholar.google.ca/citations?user=DT5WUOsAAAAJ&hl=en">Prof. Catherine Rosenberg </a> where I implemented
                 two-level Weighted Round Robin fashioned schedulers for RAN sharing on top of a third-party, open-source project
                 with a large codebase (OpenAirInterface) in C/C++. More information about the project is available <a href="#masters">here</a>.
               </p>
@@ -165,7 +165,7 @@
               </p>
               <p>
                 I completed a Microsoft learning path that covers the fundamentals of mixed reality apps using HoloLens 2. I successfully integrated the scripts,
-                compiled the projects and deployed the executables to the HoloLens 2 device. Through the modules, I learnt the essentials about hand interaction, 
+                compiled the projects and deployed the executables to the HoloLens 2 device. Through the modules, I learnt the essentials about hand interaction,
                 object tracking, 3D object interaction, eye-tracking and spatial anchors.</br>
               <a href="https://github.com/YektaDemirci/HoloLens2-trials">Compiled Code</a>
               </p>
@@ -180,15 +180,15 @@
                 <papertitle> Two-level Weighted Round Robin (WRR) slice scheduler on OAI and FlexRAN <i>MASc project</i></papertitle>
               </p>
               <p>
-                For my MASc project, I implemented a two-level WRR scheduler for Physical Resource Block (PRB) allocation on top of a <b>third-party</b>, <b>open-source</b> Radio Access Network (RAN) project with a <b>large codebase</b>; OpenAirInterface 
+                For my MASc project, I implemented a two-level WRR scheduler for Physical Resource Block (PRB) allocation on top of a <b>third-party</b>, <b>open-source</b> Radio Access Network (RAN) project with a <b>large codebase</b>; OpenAirInterface
                 and flexRAN in <b>C/C++</b>. Besides the WRR implementation on top of the eNB source codes, I also enhanced the existing API to change the active slice scheduler to WRR on the fly via FlexRAN.
                 Additionally, I provided detailed guides to set-up a private LTE network both in the nFAPI emulation of OAI and with COTS hardware (bladeRF and LG Velvet phone).
                 Finally, in order to measure the performance of the implemented scheduler compared to the State of the Art solution, I implemented a traffic generator and <b>UDP client/server</b> pairs in <b>Python.</b>
               </p>
 
               <p>
-                My initial project was about enforcing Service Level Agreements in the context of RAN sharing, however, due to the scalability concerns; 
-                such as service granularity in milliseconds or massive deployments of the base stations, we decided to change the topic to the two-level PRB scheduler. 
+                My initial project was about enforcing Service Level Agreements in the context of RAN sharing, however, due to the scalability concerns;
+                such as service granularity in milliseconds or massive deployments of the base stations, we decided to change the topic to the two-level PRB scheduler.
               </p>
             </td>
           </tr>
@@ -200,7 +200,7 @@
                 <papertitle>Food Hunter Web Application <i>3 months-5 people</i></papertitle>
               </p>
               <p>
-              As a group of five people, we used agile methods (e.g. <b>Scrum meetings, Kanban board</b>) to develop a web application as a course project where we used <b>MongoDB</b>, Google maps and web crawling APIs as well as <b>HTML, CSS, JS and Python</b> (<b>Selenium</b> for testing). 
+              As a group of five people, we used agile methods (e.g. <b>Scrum meetings, Kanban board</b>) to develop a web application as a course project where we used <b>MongoDB</b>, Google maps and web crawling APIs as well as <b>HTML, CSS, JS and Python</b> (<b>Selenium</b> for testing).
               We implemented <b>unit, integration, system and acceptance tests.</b>
               In order to provide a user friendly interface we designed a single page with three sliding bars. The website takes location and ingredients as inputs and it suggests some meals. </br>
               <a href="https://drive.google.com/file/d/1LkJFiDsxUO1RzRtabfqWMFxHFygmQ4oj/view?usp=sharing">Presentation</a> <span>|</span>
@@ -301,7 +301,7 @@
               <p>
               For the final year capstone project, with a group of five people we designed and implemented a <b>2D Simultaneous Localization and Mapping (SLAM) robot.</b>
               The robot localizes itself in an unknown area and does 2D mapping as well as identification of the objects with their center locations.
-              Besides, the generic group responsibilities such as documentation or helping to solve any unexpected urgent problems, 
+              Besides, the generic group responsibilities such as documentation or helping to solve any unexpected urgent problems,
               I was mainly in charge of <b>noise filtering, (novel) path planning, and object classification algorithms.</b>
               </br>
               <a href="https://github.com/YektaDemirci/undergrad_assignments/blob/master/BachelorGraduationProject_EE493-494/conceptual_design_report.pdf">Conceptual design report</a> <span>|</span>
