--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <td width="25%"><img src="img/rover.png" alt="masters" width="180" height="140"></td>
             <td width="75%" >
               <p>
-                <papertitle> "HoloLens 2 fundamentals: developing mixed reality applications" learning path  <i>A few days- individual </i></papertitle>
+                <papertitle> "Hololens 2 fundamentals: developing mixed reality applications" learning path  <i>A few days- individual </i></papertitle>
               </p>
               <p>
                 I completed a Microsoft learning path that covers the fundamentals of mixed reality apps using HoloLens 2. I successfully integrated the scripts,
