--- a/index.html
+++ b/index.html
@@ -104,18 +104,21 @@
                 <name>Yekta Demirci </name>
               </p>
               <p>
-                Hi there! I am a Software Engineer enthusiast who is always passiniate to learn more. I am currently working as a software engineer at
-                <a href="https://www.interaptix.com/">Interaptix Augmented Reality.</a>
+                Hi there! I am a Software Engineer enthusiast with over 3 years of development experience and a MASc degree. I am currently looking for new opportunities as a <span style="color: red;">Technical Product Manager</span> or <span style="color: red;">Backend Software Engineer</span>.
+              </p>
+              <p>  
+                I am always passionate to learn more and recently I acquired some certifications; AZ-305, AZ-104, AZ-900 from Microsoft including <b>Solutions Architecture Expert</b> as well as PSPO-I and PSM-I from Scrum.
+                Additionally, I completed the Software Product Management Specialization (University of Alberta) and Docker and Kubernetes: The Complete Guide (Udemy) online courses.
               </p>
               <p>
-                I graduated with a Master's of Applied Science (MASc) degree from <a href="https://uwaterloo.ca/">the University of Waterloo</a>, Electrical and Computer Engineering
-                with Software Engineering specialization. Before starting to the graduate school, I completed my Bachelor of Science (BSc) in the Electrical and Electronics Engineering at
-                <a href="http://www.metu.edu.tr/">Middle East Technical University</a> where I specialized in telecommunication and software fields during my final
-                year and took extra classes from the <a href="https://ceng.metu.edu.tr/">Computer Engineering</a>.
+                After my fruitful one and a half years of startup experience at Interaptix AR as a software engineer, I gracefully resigned in August 2023 to improve my soft and technical skills.
+                Before Interaptix, I graduated with a Master's of Applied Science (MASc) degree with software engineering specialization from the <a href="https://uwaterloo.ca/">University of Waterloo</a>, ECE department.
+                Before starting to graduate school, I completed my Bachelor of Science (BSc) in the Electrical and Electronics Engineering at
+                <a href="http://www.metu.edu.tr/">METU</a> where I specialized in telecommunications and software fields and took extra classes from the Computer Engineering.
               </p>
               <p>
                 During my undergraduate studies, I had exchange programs at <a href="https://www.ntu.edu.sg/">NTU (Singapore)</a> and
-                 <a href="https://www.kaist.ac.kr/en/">KAIST (Korea)</a>. Outside of work, I highly enjoy cooking, hiking, camping, travelling abroad
+                 <a href="https://www.kaist.ac.kr/en/">KAIST (Korea)</a>. Outside of work, I highly enjoy cooking, hiking, camping, traveling abroad
                   and experiencing new cultures.
               </p>
               <p align=center>
@@ -537,6 +540,16 @@
           <tr>
             <td width="25%"><img src="img/tetris.png" alt="tetris" width="160" height="160"></td>
             <td width="100%" valign="center">
+              <p>
+                <a href="https://www.udemy.com/course/docker-and-kubernetes-the-complete-guide/">
+                  Docker and Kubernetes: The Complete Guide - Udemy - Spring 2023
+                </a>
+              </p>
+              <p>
+                <a href="https://www.ualberta.ca/admissions-programs/online-courses/software-product-management.html">
+                  Software Product Management (6 courses) - University of Alberta - Spring 2023
+                </a>
+              </p>
               <p>
                 <a href="https://www.udemy.com/course/beg-modern-cpp/">
                   Complete Modern C++ (C++11/14/17) - Udemy - Winter 2022
