--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 Hi there! I am a Software Engineer enthusiast with over 3 years of development experience and a MASc degree. I am currently looking for new opportunities as a <span style="color: red;">Technical Product Manager</span> or <span style="color: red;">Backend Software Engineer</span>.
               </p>
               <p>  
-                I am always passionate to learn more and recently I acquired some certifications; AZ-305, AZ-104, AZ-900 from Microsoft including <b>Solutions Architecture Expert</b> as well as PSPO-I and PSM-I from Scrum.
+                I am always passionate to learn more and recently I acquired some certifications; AZ-305, AZ-104, AZ-900 from Microsoft including <b>Solutions Architect Expert</b> as well as PSPO-I and PSM-I from Scrum.
                 Additionally, I completed the Software Product Management Specialization (University of Alberta) and Docker and Kubernetes: The Complete Guide (Udemy) online courses.
               </p>
               <p>
