--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 Hi there! I am a Software Engineer enthusiast with over 3 years of development experience and a MASc degree. I am currently looking for new opportunities!
               </p>
               <p>  
-                I am always passionate to learn more and recently I acquired some certifications; AZ-305, AZ-104, AZ-900 from Microsoft including <a href="https://learn.microsoft.com/en-gb/users/yektademirci-4544/credentials/5b7b55090dee8d0a">Azure Architect Expert</a>
+                I am always passionate to learn more and recently I acquired some certifications; AZ-305, AZ-104, AZ-900 from Microsoft including <a href="https://learn.microsoft.com/en-gb/users/yektademirci-4544/credentials/5b7b55090dee8d0a">Azure Solutions Architect Expert</a>
                  as well as <a href="https://www.scrum.org/user/1281186"> PSM-I</a> and <a href="https://www.scrum.org/user/1281186"> PSPO-I</a> from Scrum. 
                 Additionally, I completed the Software Product Management Specialization (University of Alberta) and Docker and Kubernetes: The Complete Guide (Udemy) online courses.
               </p>
